Changed initial state to english

--- a/todolist.html
+++ b/todolist.html
@@ -27,15 +27,15 @@
                 state = {
                     todos: [{
                         id: 1,
-                        title: 'Meetup promoten',
+                        title: 'Promote meetup',
                         done: true
                     }, {
                         id: 2,
-                        title: 'Koffie zetten',
+                        title: 'Make coffee',
                         done: false
                     }, {
                         id: 3,
-                        title: 'Presentatie maken',
+                        title: 'Prepare slides',
                         done: false
                     }]                   
                 }
